# libsdl

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ryan/sdk/libsdl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/SDL/src/: SDL2Android.c
app/src/main/cpp/SDL/src/thread/generic/: SDL_syscond.c
app/src/main/cpp/SDL/src/video/haiku/: SDL_BApp.h
app/src/main/cpp/src/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
